# Autocraft

Assets/: Main.unity  MouseLook.cs  MyCharacterController.cs  SandBox.unity
Assets/Materials/: 121813.mat
Assets/Resources/Materials/: Blue.mat  Red.mat
Assets/Resources/Materials/Materials/: Grid-Level2.mat
Assets/Resources/Prefabs/: BlueRay.prefab  Cube.prefab  ItemSlot.prefab  LaserRifle.prefab  PushPullgun.prefab  RedRay.prefab
Assets/Resources/TESTS/: Cube.prefab  Server.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: Common.cs  Core.cs  MyCharacterController.cs  PlayerItems.cs
Assets/TESTS/: MyServer.cs  NetworkTests.unity  TheCube.prefab
Assets/Third/LaserRifle/: Futuristic_Weapon_Lowpoly.mtl  futuristic_weapon_concept_lowpoly2.mtl
Assets/Third/PushPullGun/: 13893_Laser_Pistol_v2_l3.mtl
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
server/: .gitignore  CMakeLists.txt  common.hpp  config.hpp  connection.cpp  connection.hpp  containers.hpp  entities.cpp  entities.hpp  entities.hxx  entity.cpp  entity.hpp  lock.hpp  log.cpp  log.hpp  main.cpp  master_conn.hpp  noncopyable.hpp  persistence.hpp  player.cpp  player.hpp  player_conn.cpp  player_conn.hpp  protocol.hpp  random.cpp  random.hpp  redis_helper.cpp  redis_helper.hpp  redis_persistence.cpp  redis_persistence.hpp  save_load.cpp  save_load.hpp  server.cpp  server.hpp  time.cpp  time.hpp  unity.cpp  utils.cpp  utils.hpp  vector.cpp  (+1 more)
